BAEL-6085 - Working with Virtual Threads in Spring 6